--- a/index.html
+++ b/index.html
@@ -19,14 +19,16 @@
     </div>
     <div class="square red" order="1">1
     </div>
-    <br class="clearBoth" />
+    <!--<br class="clearBoth" />
     <span id="status-1"></span>
     <span id="status-2"></span>
     <span id="status-3"></span>
     
-    <!--<span id="click-num">Click no. </span>-->
+    <span id="click-num">Click no. </span>-->
+    <img style="width:100vw;"class="gif2" src="donald-trump-cnn-email-times.gif"/>
     <img style="width:100vw;"class="gif" src="giphy.gif"/>
-    <script src="http://code.jquery.com/jquery-1.10.1.js"></script>
+    <button class="start" onclick="start()">start again</button>
+    <script src="https://code.jquery.com/jquery-1.10.1.js"></script>
     <script src="index.js"></script>
   
   </body>
