--- a/index.html
+++ b/index.html
@@ -28,6 +28,8 @@
     <img style="width:100vw;"class="gif2" src="donald-trump-cnn-email-times.gif"/>
     <img style="width:100vw;"class="gif" src="giphy.gif"/>
     <button class="start" onclick="start()">start again</button>
+   <a class="card" href="mailto:?subject=Feliz%20Natal&body=Veja%20o%20seu%20postal%20aqui: https://m.media-amazon.com/images/I/71kIe-wJL9L._AC_SS350_.jpg"> <button>Envie este postal à sua família e amigos</button></a>
+    
     <script src="https://code.jquery.com/jquery-1.10.1.js"></script>
     <script src="index.js"></script>
   
