--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <title></title>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="assets/vendor/fontawesome/css/all.min.css">
     <link rel="stylesheet" href="index.css">
   </head>
   <body>
@@ -28,8 +29,32 @@
     <img style="width:100vw;"class="gif2" src="donald-trump-cnn-email-times.gif"/>
     <img style="width:100vw;"class="gif" src="giphy.gif"/>
     <button class="start" onclick="start()">start again</button>
-   <a class="card" href="mailto:?subject=Feliz%20Natal&body=Veja%20o%20seu%20postal%20aqui: https://m.media-amazon.com/images/I/71kIe-wJL9L._AC_SS350_.jpg"> <button>Envie este postal à sua família e amigos</button></a>
-    
+    <div class="card">
+      <a  href="mailto:?subject=Feliz%20Natal&body=Veja%20o%20seu%20postal%20aqui: https://m.media-amazon.com/images/I/71kIe-wJL9L._AC_SS350_.jpg"> email</a>
+  
+    <a class="d-inline-block mr-1" href="https://www.facebook.com/sharer/sharer.php?u=https://m.media-amazon.com/images/I/71kIe-wJL9L._AC_SS350_.jpg" target="_blank" title="facebook">
+      <div class="social-footer text-center align-middle">
+        <i class="fab fa-facebook-f icon-footer">facebook</i>
+      </div>
+    </a>
+    <a class="d-inline-block mr-1" href=" https://www.linkedin.com/shareArticle?mini=true&amp;url=https://m.media-amazon.com/images/I/71kIe-wJL9L._AC_SS350_.jpg" target="_blank" title="LinkedIn">
+      <div class="social-footer text-center align-middle">
+        <i class="fab fa-linkedin-in icon-footer">linkedin</i>
+      </div>
+    </a>
+    <a class="d-inline-block " href="https://twitter.com/intent/tweet?url=https://m.media-amazon.com/images/I/71kIe-wJL9L._AC_SS350_.jpg" target="_blank" title="Twitter">
+      <div class="social-footer text-center align-middle">
+        <i class="fab fa-twitter icon-footer">twitter</i>
+      </div>
+    </a>
+    <a class="d-inline-block d-sm-none" href="whatsapp://send?text=https://m.media-amazon.com/images/I/71kIe-wJL9L._AC_SS350_.jpg" target="_blank" title="WhatsApp">
+      <div class="social-footer text-center align-middle">
+        <i class="fab fa-whatsapp icon-footer">whatsapp</i>
+      </div>
+    </a>
+    </div>
+   
+ 
     <script src="https://code.jquery.com/jquery-1.10.1.js"></script>
     <script src="index.js"></script>
   
