--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="assets/vendor/fontawesome/css/all.min.css">
     <link rel="stylesheet" href="index.css">
   </head>
-  <body>
+  <body style="text-align:center;">
     <div class="line 3 three"></div>
     <div class="line 2 two"></div>
     <div class="square blue" order="3">3
@@ -26,8 +26,11 @@
     <span id="status-3"></span>
     
     <span id="click-num">Click no. </span>-->
-    <img style="width:100vw;"class="gif2" src="donald-trump-cnn-email-times.gif"/>
-    <img style="width:100vw;"class="gif" src="giphy.gif"/>
+    <div style="text-align:center;">
+    <img class="gif2" src="donald-trump-cnn-email-times.gif"/>
+    <img class="gif" src="giphy.gif"/>
+    </div>
+    
     <button class="start" onclick="start()">start again</button>
     <div class="card">
       <a  href="mailto:?subject=Feliz%20Natal&body=Veja%20o%20seu%20postal%20aqui: https://m.media-amazon.com/images/I/71kIe-wJL9L._AC_SS350_.jpg"> email</a>
