--- a/index.html
+++ b/index.html
@@ -14,20 +14,14 @@
     <audio  style="display:none;" id="myAudio" controls autoplay loop>
       <source src="background.mp3" type="audio/mp3">
   </audio>
-  <button onclick="playAudio()" type="button">Play Audio</button>
-<button onclick="pauseAudio()" type="button">Pause Audio</button> 
+  <audio  style="display:none;" id="hohoho" >
+    <source src="hohoho.wav" type="audio/mp3">
+</audio>
+  <div style="text-align:left;">
+    <button class="play" onclick="playAudio()" type="button">Play Audio</button>
+    <button class="pause" onclick="pauseAudio()" type="button">Pause Audio</button> </div>
+  
 
-<script>
-var x = document.getElementById("myAudio"); 
-
-function playAudio() { 
-  x.play(); 
-} 
-
-function pauseAudio() { 
-  x.pause(); 
-} 
-</script>
 <div style="margin-top:20px;">
   <div class="line 3 three"></div>
   <div class="line 2 two"></div>
