--- a/index.html
+++ b/index.html
@@ -17,6 +17,9 @@
   <audio  style="display:none;" id="hohoho" >
     <source src="hohoho.wav" type="audio/mp3">
 </audio>
+<audio  style="display:none;" id="crash" >
+  <source src="crash.mp3" type="audio/mp3">
+</audio>
   <div style="text-align:left;">
     <button class="play" onclick="playAudio()" type="button">Play Audio</button>
     <button class="pause" onclick="pauseAudio()" type="button">Pause Audio</button> </div>
