--- a/index.html
+++ b/index.html
@@ -11,14 +11,15 @@
     <link rel="stylesheet" href="index.css">
   </head>
   <body style="text-align:center;">
-    <audio  style="display:none;" id="myAudio" controls autoplay loop>
-      <source src="background.mp3" type="audio/mp3">
-  </audio>
-  <audio  style="display:none;" id="hohoho" >
-    <source src="hohoho.wav" type="audio/mp3">
+ 
+  <audio src="background.mp3" style="display:none;" id="myAudio" controls autoplay loop>
+   
 </audio>
-<audio  style="display:none;" id="crash" >
-  <source src="crash.mp3" type="audio/mp3">
+  <audio src="hohoho.wav" style="display:none;" id="hohoho" >
+   
+</audio>
+<audio src="crash.mp3" style="display:none;" id="crash" >
+ 
 </audio>
   <div style="text-align:left;">
     <button class="play" onclick="playAudio()" type="button">Play Audio</button>
